tests/error/py_errors/tket2_not_installed.err
Error: Tket2 not installed (at $FILE:16:8)
   | 
14 | @guppy(module)
15 | def foo(q: qubit) -> qubit:
16 |     f = py(circ)
   |         ^^^^^^^^ Experimental pytket compatibility requires `tket2` to be
   |                  installed

Help: Install tket2: `pip install tket2`

Guppy compilation failed due to 1 previous error
